// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Errors component should render block errors 1`] = `
<div
  className="text-danger"
  style={Object {}}
>
  Foo
</div>
`;

exports[`Errors component should render block errors with display adjustements to display it below an input 1`] = `
<div
  className="text-danger"
  style={
    Object {
      "marginBottom": ".5rem",
      "marginTop": "-8px",
    }
  }
>
  Foo
</div>
`;

exports[`Errors component should render inline errors 1`] = `
<div
  className="d-inline-block text-danger ml-2"
>
  Foo
</div>
`;

exports[`Errors component should render using passed tag 1`] = `
<pre
  className="text-danger"
  style={Object {}}
>
  Foo
</pre>
`;

exports[`Errors component should return null if there is no errors 1`] = `""`;
